--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ html {
 }
 
 main {
-    overflow: hidden;
     background-color: black;
     z-index: -10;
 }
@@ -30,7 +29,8 @@ main {
     height: 90vh; 
     min-width: 95vw;
     width: 95vw;
-    overflow-y: scroll; /* Ou auto */
+    overflow-y: scroll; 
+    overflow-x: hidden;
     position: relative;
     
     /* Pour Firefox */
